# testbtc

./: .env.example  .gitignore  AGENTS.md  ATTEMPTED.md  HANDOFF.md  ITERATIONS_101_110.md  ITERATIONS_111_115.md  ITERATIONS_116_120.md  ITERATIONS_121_130.md  ITERATIONS_131_140.md  ITERATIONS_141_150.md  ITERATIONS_93_95.md  ITERATIONS_96_100.md  ITERATION_0.md  ITERATION_1.md  ITERATION_10.md  ITERATION_11.md  ITERATION_12.md  ITERATION_13.md  ITERATION_14.md  ITERATION_15.md  ITERATION_156.md  ITERATION_157.md  ITERATION_158.md  ITERATION_159.md  ITERATION_16.md  ITERATION_160.md  ITERATION_161.md  ITERATION_162.md  ITERATION_163.md  ITERATION_164.md  ITERATION_165.md  ITERATION_166.md  ITERATION_167.md  ITERATION_17.md  ITERATION_18.md  ITERATION_19.md  ITERATION_2.md  ITERATION_20.md  ITERATION_21.md  (+102 more)
.cache/: check-overfitting.js  run-backtest.js  run-optimization.js
btc_tools/: __init__.py  cli.py  collector.py  trainer.py
py_clob_samples/: py_clob_samples_20260211T215006Z.json  py_clob_samples_20260211T215410Z.json
scripts/: backtest-all.ts  backtest-base.ts  backtest-stocks.ts  backtest-top.ts  batch-optimize.ts  check-overfitting.ts  collect-crypto.ts  compare-314.ts  convert-stock-data.ts  download-stock-data.ts  generate-iterations-211-300.ts  generate-strategies.ts  optimize-fast.ts  run-backtest-bollinger.ts  run-backtest.ts  run-collector.ts  run-grid-search.ts  run-live-trader.ts  run-optimization.ts  test-314-rsi.ts  test-368-time-limit.ts  test-369-combo2.ts  test-iter19b-large.ts  test-iter22b-large.ts  test-iter22b-small.ts  test-iter22c-large.ts  (+4 more)
(+3223 files in other folders)
