[project]
name = "btc-tools"
version = "0.1.0"
description = "Async helpers for collecting and modeling per-second BTC data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Heinrich" } ]
dependencies = [
    "httpx>=0.26",
    "numpy>=1.26",
    "pandas>=2.2",
    "torch>=2.1",
    "uvloop>=0.17",
]
[project.scripts]
btc-collector = "btc_tools.cli:collect_main"
btc-trainer = "btc_tools.cli:train_main"
